# keystone

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  env.example
.cargo/: config.toml
.github/workflows/: ci.yml
apps/docs/content/docs/: configuration.mdx
apps/docs/content/docs/connectors/: vercel.mdx
apps/docs/content/docs/operators/: runbook.mdx
apps/web/src/app/: page.tsx
apps/web/src/app/auth/callback/: page.tsx
docs/: .gitignore  INCIDENT_CHECKLIST.md  OPERATOR_RUNBOOK.md  README.md  ROTATION_CHECKLIST.md  package.json
docs/.source/: index.ts
docs/content/docs/: cli-reference.mdx  configuration.mdx  index.mdx  installation.mdx  meta.json  quick-start.mdx  usage.mdx
docs/content/docs/connectors/: aws.mdx  azure.mdx  cloudflare.mdx  fly.mdx  gcp.mdx  index.mdx  netlify.mdx  render.mdx  vercel.mdx
docs/content/docs/keystone/: index.mdx
docs/content/docs/operators/: incident-checklist.mdx  index.mdx  invariants.mdx  meta.json  rotation-checklist.mdx  runbook.mdx
docs/content/docs/saas/: index.mdx
docs/content/docs/usage/: key-pools.mdx
examples/: README.md  app_signal_hook.rs
examples/rust/: app_signal_hook.rs
examples/typescript/cli-script/: script.ts
examples/typescript/express-api/: server.ts
examples/typescript/nextjs-app/app/: layout.tsx
keystone/.next/dev/: build-manifest.json  fallback-build-manifest.json
keystone/.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json
keystone/.next/dev/server/pages/: _app.js  _document.js  _error.js
keystone/.next/dev/static/chunks/: 4a725_next_app_eb7140ca.js  4a725_next_app_eb7140ca.js.map  4a725_next_dist_bd9350a2._.js  4a725_next_dist_bd9350a2._.js.map  4a725_next_dist_client_460ebdc9._.js  4a725_next_dist_client_460ebdc9._.js.map  4a725_next_dist_compiled_e4978cff._.js  4a725_next_dist_compiled_e4978cff._.js.map  4a725_next_dist_d9f93565._.js  4a725_next_dist_d9f93565._.js.map  4a725_next_dist_shared_lib_c4f7d790._.js  4a725_next_dist_shared_lib_c4f7d790._.js.map  4a725_next_dist_shared_lib_eec9baac._.js  4a725_next_dist_shared_lib_eec9baac._.js.map  4a725_next_error_35a5d413.js  4a725_next_error_35a5d413.js.map  76102_react-dom_44795136._.js  76102_react-dom_44795136._.js.map  [next]_entry_page-loader_ts_290e6a15._.js  [next]_entry_page-loader_ts_a6f9344b._.js  [root-of-the-server]__84f9c916._.js  [root-of-the-server]__cca657fc._.js  keystone_keystone_pages__app_2da965e7._.js  keystone_keystone_pages__error_2da965e7._.js  node_modules__pnpm_a607ebca._.js  node_modules__pnpm_a607ebca._.js.map  turbopack-keystone_keystone_pages__app_134e03d7._.js  turbopack-keystone_keystone_pages__error_8af42572._.js
keystone/content/docs/: cli-reference.mdx  configuration.mdx  index.mdx  installation.mdx  quick-start.mdx  usage.mdx
keystone/content/docs/connectors/: index.mdx  meta.json  vercel.mdx
keystone/content/docs/operators/: incident-checklist.mdx  index.mdx  rotation-checklist.mdx  runbook.mdx
scripts/: version.sh
services/api/: Cargo.toml  Dockerfile  README.md
services/api/src/: lib.rs  main.rs
services/api/src/api/: routes.rs
services/api/src/api/handlers/: api_keys.rs  credentials.rs  members.rs  mod.rs  providers.rs  workspaces.rs
services/api/src/auth/: api_keys.rs  jwt.rs  middleware.rs  mod.rs
services/api/src/credentials/: cache.rs  mod.rs  modes.rs  resolver.rs
services/api/src/metering/: counter.rs
services/api/src/supabase/: client.rs
services/api/src/vault/: encryption.rs  mod.rs  storage.rs
services/api/src/workspace/: mod.rs  models.rs  rbac.rs
services/api/tests/: vault_tests.rs
src/: audit.rs  cli.rs  config.rs  daemon.rs  dev.rs  lib.rs  lock.rs  main.rs  pool.rs  prod.rs  rollback.rs  rotation.rs  saas.rs  signals.rs  tui.rs
src/connectors/: aws.rs  azure.rs  cloudflare.rs  fly.rs  gcp.rs  mod.rs  netlify.rs  render.rs  vercel.rs
supabase/: config.toml
supabase/migrations/: 20240101000000_initial_schema.sql
tests/acceptance/: audit_test.rs  dev_mode_test.rs  lock_test.rs  mod.rs
(+13 files in other folders)
